--- a/Ocean_cms/WebRoot/index.html
+++ b/Ocean_cms/WebRoot/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Ocean内容管理系统</title>
 <link rel="stylesheet" href="styles/main.css" type="text/css" />
 </head>
 <body>
-<!---->
-<!--主体开始-->
-<!--编辑栏开始-->
-	<div id="edit">
-	
-	</div>
-<!--编辑栏结束-->
+	<!---->
+	<!--主体开始-->
+	<!--编辑栏开始-->
+	<div id="edit"></div>
+	<!--编辑栏结束-->
 	<div id="header"></div>
 	<div id="navigation"></div>
 	<div id="content"></div>
 	<div id="footer"></div>
-<!--主体结束-->
+	<!--主体结束-->
 </body>
 </html>
