--- a/Ocean_cms/WebRoot/index.html
+++ b/Ocean_cms/WebRoot/index.html
@@ -9,7 +9,20 @@
 	<!---->
 	<!--主体开始-->
 	<!--编辑栏开始-->
-	<div id="edit"></div>
+	<div id="edit">
+		<div id="edit_nav">
+			<ul id="edit_nav_menu">
+				<li><a href="#">模板选择</a>
+				</li>
+				<li><a href="#">布局管理</a>
+				</li>
+				<li><a href="#">模板管理</a>
+				</li>
+				<li><a href="#">其他设置</a>
+				</li>
+			</ul>
+		</div>
+	</div>
 	<!--编辑栏结束-->
 	<div id="header"></div>
 	<div id="navigation"></div>
