--- a/Ocean_cms/WebRoot/index.html
+++ b/Ocean_cms/WebRoot/index.html
@@ -9,7 +9,7 @@
 	<!---->
 	<!--主体开始-->
 	<!--编辑栏开始-->
-	<div id="edit">
+	<div id="edit" class="autoCenter">
 		<div id="edit_nav">
 			<ul id="edit_nav_menu">
 				<li><a href="#">模板选择</a>
