--- a/Ocean_cms/WebRoot/index.html
+++ b/Ocean_cms/WebRoot/index.html
@@ -1,33 +1,48 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" class="yui3-cssreset">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Ocean内容管理系统</title>
-<link rel="stylesheet" href="styles/main.css" type="text/css" />
-</head>
-<body>
-	<!---->
-	<!--主体开始-->
-	<!--编辑栏开始-->
-	<div id="edit" class="autoCenter">
-		<div id="edit_nav">
-			<ul id="edit_nav_menu">
-				<li><a href="#">模板选择</a>
-				</li>
-				<li><a href="#">布局管理</a>
-				</li>
-				<li><a href="#">模板管理</a>
-				</li>
-				<li><a href="#">其他设置</a>
-				</li>
-			</ul>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<title>Ocean内容管理系统</title>
+		<link rel="stylesheet" href="styles/main.css" type="text/css" />
+	</head>
+	<body>
+		<!---->
+		<!--主体开始-->
+		<!--编辑栏开始-->
+		<div id="edit" class="autoCenter">
+			<div id="edit_nav">
+				<ul id="edit_nav_menu">
+					<li>
+						<a href="#">模板选择</a>
+					</li>
+					<li>
+						<a href="#">布局管理</a>
+					</li>
+					<li>
+						<a href="#">模板管理</a>
+					</li>
+					<li>
+						<a href="#">其他设置</a>
+					</li>
+				</ul>
+				<ul id="edit_nav_usertool">
+					<li>
+						<a href="#">Edwin</a>
+					</li>
+					<li>
+						<a href="#">注销</a>
+					</li>
+					<li>
+						<a href="#">保存</a>
+					</li>
+				</ul>
+			</div>
 		</div>
-	</div>
-	<!--编辑栏结束-->
-	<div id="header"></div>
-	<div id="navigation"></div>
-	<div id="content"></div>
-	<div id="footer"></div>
-	<!--主体结束-->
-</body>
+		<!--编辑栏结束-->
+		<div id="header"></div>
+		<div id="navigation"></div>
+		<div id="content"></div>
+		<div id="footer"></div>
+		<!--主体结束-->
+	</body>
 </html>
