--- a/Ocean_cms/WebRoot/index.html
+++ b/Ocean_cms/WebRoot/index.html
@@ -33,7 +33,7 @@
 			</ul>
 		</div>
 		<div id="edit_content">
-			<div id="edit_content_left"></div>
+			<div id="edit_content_left">ddd</div>
 			<div id="edit_content_right"></div>
 		</div>
 	</div>
