--- a/Ocean_cms/WebRoot/index.html
+++ b/Ocean_cms/WebRoot/index.html
@@ -33,7 +33,29 @@
 			</ul>
 		</div>
 		<div id="edit_content">
-			<div id="edit_content_left">ddd</div>
+			<div id="edit_content_left">
+				<div id="module_show">
+					<div class="list">
+						<div class="element">
+							<img src="imgs/tmp.png" width="75" height="75px"></img> <span>模板1</span>
+						</div>
+					</div>
+				</div>
+				<div id="module_show">
+					<div class="list">
+						<div class="element">
+							<img src="imgs/tmp.png" width="75" height="75px"></img> <span>模板1</span>
+						</div>
+					</div>
+				</div>
+				<div id="module_show">
+					<div class="list">
+						<div class="element">
+							<img src="imgs/tmp.png" width="75" height="75px"></img> <span>模板1</span>
+						</div>
+					</div>
+				</div>
+			</div>
 			<div id="edit_content_right"></div>
 		</div>
 	</div>
